--- a/proyecto sistema sabanas/menu/navbar.html
+++ b/proyecto sistema sabanas/menu/navbar.html
@@ -36,6 +36,7 @@
             <div class="dropdown-content">
                 <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/menu/tabla_ajustes.html">Ajuste
                     de Inventario</a>
+                <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/menu/stock/ui_stock_ajuste.php">Ajuste stock v3</a>
             </div>
         </li>
         <li class="dropdown">
@@ -50,9 +51,11 @@
         <li class="dropdown">
             <a href="#" class="dropbtn">Referenciales</a>
             <div class="dropdown-content">
-                <a
-                    href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/menu/proveedores.html">Proveedores</a>
-                <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/menu/producto.html">Producto</a>
+                <!-- <a
+                    href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/menu/proveedores.html">Proveedores</a> -->
+                <a  href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/menu/referenciales_compra/proveedor/ui_proveedores.php">Proveedores v3</a>
+                <!-- <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/menu/producto.html">Producto</a> -->
+                <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/menu/referenciales_compra/producto/ui_producto.php">Producto v3</a>
             </div>
         </li>
         <li>
