sucursal y condcion en oc

--- a/proyecto sistema sabanas/menu/navbar.html
+++ b/proyecto sistema sabanas/menu/navbar.html
@@ -34,8 +34,8 @@
         <li class="dropdown">
             <a href="#" class="dropbtn">Gestion de Inventario</a>
             <div class="dropdown-content">
-                <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/menu/tabla_ajustes.html">Ajuste
-                    de Inventario</a>
+                <!-- <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/menu/tabla_ajustes.html">Ajuste
+                    de Inventario</a> -->
                 <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/menu/stock/ui_stock_ajuste.php">Ajuste stock v3</a>
             </div>
         </li>
