--- a/proyecto sistema sabanas/menu/navbar.html
+++ b/proyecto sistema sabanas/menu/navbar.html
@@ -56,6 +56,7 @@
                 <a  href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/menu/referenciales_compra/proveedor/ui_proveedores.php">Proveedores v3</a>
                 <!-- <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/menu/producto.html">Producto</a> -->
                 <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/menu/referenciales_compra/producto/ui_producto.php">Producto v3</a>
+                <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/menu/referenciales_compra/sucursales/ui_sucursales.php">Sucursales v3</a>
             </div>
         </li>
         <li>
