--- a/proyecto sistema sabanas/menu/presupuesto.html
+++ b/proyecto sistema sabanas/menu/presupuesto.html
@@ -54,7 +54,7 @@
     </div>
 
     <h3>Detalle</h3>
-    <div class="row">
+    <!-- <div class="row">
       <div>
         <label>Producto (según pedido seleccionado)</label>
         <select id="producto">
@@ -73,7 +73,7 @@
       <div style="align-self:flex-end">
         <button type="button" id="btnAgregar">Agregar</button>
       </div>
-    </div>
+    </div> -->
 
     <table id="tablaDetalle">
       <thead>
